core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@malformed_attr.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Failed to parse diplomat::attr
In src/ast/snapshots/span_testing/malformed_attr.rs:3:23:
...ttr(**)]...
        ^
expected `,`
